--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,20 +14,35 @@
   <body>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <%= link_to "Gossip App", login_path, :class => "navbar-brand" %>
+      <%= link_to "Gossip App", new_session_path, :class => "navbar-brand" %>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <%= link_to "S'inscrire", new_user_path, :class => "nav-link" %>
-          </li>
+          <%= link_to "Feed", gossips_path, :class => "nav-link" %>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <% if logged_in? %>
+            <%= link_to "Se déconnecter", session_path(session.id), method: :delete, :class => "nav-link" %>
+          <% else %>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle p-4 btn-secondary text-light" data-toggle="dropdown" role="button" aria-haspopup="true">Menu</a>
+              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+                <%= link_to "S'inscrire", new_user_path, :class => "dropdown-item" %>
+                <%= link_to "Se connecter", new_session_path, :class => "dropdown-item" %>
+              </div>
+            </li>
+          <% end %>
         </ul>
       </div>
     </nav>
 
     <%= yield %>
+
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   </body>
 </html>
