comment and like fix

--- a/app/views/cities/show.html.erb
+++ b/app/views/cities/show.html.erb
@@ -1,6 +1,7 @@
 <h1 class="text-center mt-4"><%= @city.name %></h1>
 
 <% @gossips.each do |gossip| %>
+<% @gossip_id = gossip.id %>
 
   <div class="container">
     <div class="card-deck">
@@ -11,12 +12,12 @@
             <%= gossip.content %>
             <small class="text-muted"><%= gossip.user.first_name %> <%= gossip.user.last_name %></small></br>
             <% if gossip.user == current_user %>
-              <%= link_to "Modifier", edit_gossip_path(gossip.id) %> -
-              <%= link_to "Supprimer", gossip_path(gossip.id), :confirm => "Are you sure?", :method => :delete %></br>
+              <%= link_to "Modifier", edit_gossip_path(@gossip_id) %> -
+              <%= link_to "Supprimer", gossip_path(@gossip_id), :confirm => "Are you sure?", :method => :delete %></br>
             <% end %>
           <% if logged_in? %>
-            <%= link_to "Like", gossip_likes_path(gossip.id),  method: "post" %>
-            <%= link_to "Unlike", gossip_like_path(gossip.id), :method => :delete %>
+            <%= link_to "Like", gossip_likes_path(@gossip_id),  method: "post" %>
+            <%= link_to "Unlike", gossip_like_path(@gossip_id), :method => :delete %>
           <% end %>
           <small class="text-muted"><%= gossip.likes.count %> like(s)</small>
         </div>
